<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_pink"
    tools:context=".ActivityNavMenu">

    <Button
        android:id="@+id/nav_menu_add_medicine_btn"
        android:layout_width="151dp"
        android:layout_height="67dp"
        android:layout_marginBottom="@dimen/nav_menu_button_bottom_margin"
        android:background="@drawable/border"
        android:onClick="onClickNavButton"
        android:text="@string/nav_menu_add_medicine"
        android:textColor="#1565C0"
        app:layout_constraintBottom_toTopOf="@+id/nav_menu_low_on_stock_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/nav_menu_employee_list"
        android:layout_width="151dp"
        android:layout_height="67dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="@dimen/nav_menu_button_bottom_margin"
        android:background="@drawable/border"
        android:onClick="onClickNavButton"
        android:text="@string/nav_menu_employee_list"
        android:textColor="#1565C0"
        app:layout_constraintBottom_toTopOf="@+id/nav_menu_medicine_list_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/nav_menu_medicine_list_btn"
        android:layout_width="151dp"
        android:layout_height="67dp"
        android:layout_marginBottom="@dimen/nav_menu_button_bottom_margin"
        android:background="@drawable/border"
        android:onClick="onClickNavButton"
        android:text="@string/nav_menu_medicine_list"
        android:textColor="#1565C0"
        app:layout_constraintBottom_toTopOf="@+id/nav_menu_add_medicine_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/nav_menu_low_on_stock_btn"
        android:layout_width="151dp"
        android:layout_height="67dp"
        android:layout_marginBottom="@dimen/nav_menu_button_bottom_margin"
        android:background="@drawable/border"
        android:onClick="onClickNavButton"
        android:text="@string/nav_menu_low_on_stock"
        android:textColor="#1565C0"
        app:layout_constraintBottom_toTopOf="@+id/nav_menu_search_medicine_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/nav_menu_search_medicine_btn"
        android:layout_width="151dp"
        android:layout_height="67dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/border"
        android:onClick="onClickNavButton"
        android:text="@string/nav_menu_search_medicine"
        android:textColor="#1565C0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>