<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ilac_liste_ekrani"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_pink"
    tools:context=".MedicineListActivity">

    <Spinner
        android:id="@+id/dropdownlist"
        android:layout_width="260dp"
        android:layout_height="48dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/ddlist"
        android:prompt="@string/order_prompt"
        app:layout_constraintBottom_toTopOf="@+id/medicineList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.466"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/medicineList"
        android:layout_width="410dp"
        android:layout_height="458dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/infoMedName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:text="@string/infoMedName"
        android:textColor="@color/purple_700"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/medicineList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dropdownlist"
        app:layout_constraintVertical_bias="0.533" />

    <TextView
        android:id="@+id/infoMedCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:text="@string/infoMedCompany"
        android:textColor="@color/purple_700"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/medicineList"
        app:layout_constraintStart_toEndOf="@+id/infoMedName"
        app:layout_constraintTop_toBottomOf="@+id/dropdownlist"
        app:layout_constraintVertical_bias="0.533" />

    <TextView
        android:id="@+id/infoMedType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:text="@string/infoMedType"
        android:textColor="@color/purple_700"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/medicineList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/infoMedCompany"
        app:layout_constraintTop_toBottomOf="@+id/dropdownlist"
        app:layout_constraintVertical_bias="0.533" />

</androidx.constraintlayout.widget.ConstraintLayout>