<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityEmployeeOps">

    <EditText
        android:id="@+id/inputEmployeeFirstName"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginStart="63dp"
        android:layout_marginEnd="63dp"
        android:background="@drawable/border"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/employee_first_name_hint"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/inputEmployeeLastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.777" />

    <EditText
        android:id="@+id/inputEmployeeLastName"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginStart="63dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="140dp"
        android:background="@drawable/border"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/employee_last_name_hint"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/confirmButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="189dp"
        android:layout_height="57dp"
        android:layout_marginBottom="152dp"
        android:background="@drawable/border"
        android:onClick="onConfirmButtonClicked"
        android:text="@string/employee_add_button"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>